--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 jobs:
   audit:
     runs-on: ubuntu-latest
@@ -17,4 +18,3 @@ jobs:
         run: npm ci
       - name: Run npm audit
         run: npm audit --audit-level=moderate
-
